--- a/app4 - api/index.html
+++ b/app4 - api/index.html
@@ -1,6 +1,16 @@
 <html ng-app="apiApp">
-	<body>
-		
+	<body ng-controller="gravy">
+
+		<input type="text" ng-model="pokename">
+		<button ng-click="iChooseYou(pokename)">Get Pokemon</button>
+
+		<div>
+			{{poke.name}}
+		</div>
+		<div>
+			{{poke.weight}}
+		</div>
+
 				<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.3/angular.min.js"></script>
 		<script src="app.js"></script>
 		<script src="controller.js"></script>
