this is the first try for the drills

--- a/app1 - basics/index.html
+++ b/app1 - basics/index.html
@@ -1,9 +1,12 @@
-<html>
-	<body>
+<html ng-app="app1">
+	<body ng-controller="mainCtrl">
 
-	<input type="text" placeholder="type here">
+	<input type="text" placeholder="type here" ng-model="text">
 
 	</input>
+	<div>
+		{{text}}
+	</div>
 
 		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.3/angular.js"></script>
 		<script src="app.js"></script>
