--- a/app2 - An array/index.html
+++ b/app2 - An array/index.html
@@ -3,12 +3,12 @@
 		<link rel="stylesheet" href="style.css"></link>
 	</head>
 	<body ng-controller="arrayController">
-		<div class="awesome" ng-repeat="person in myData">
-			{{person.name}}		{{person.email}}			{{person.phone}}
-
+		<div ng-repeat="person in myData">
+				{{person.name}}   {{person.phone}}    <{{person.email}}>
 		</div>
 
-		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.3/angular.min.js"></script>
+
+		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.3/angular.js"></script>
 		<script src="app.js"></script>
 		<script src="controller.js"></script>
 		<script src="service.js"></script>
