--- a/app3 - filtering/index.html
+++ b/app3 - filtering/index.html
@@ -1,14 +1,26 @@
-<html>
-	<body>
+<html ng-app="filterApp">
+
+<body ng-controller="mainCtrl">
+
+<div>
+
+	Filter name:
+	<input type="text" ng-model="searchTerm.name">
+</div>
+<div>
+	Filter email:
+	<input type="text" ng-model="searchTerm.email"
+</div>
+	<div ng-repeat="person in data | filter: searchTerm">
+	<strong>{{person.name}}</strong> ----{{person.email}}
 
 
 
 
+	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.3/angular.min.js"></script>
+	<script src="app.js"></script>
+	<script src="controller.js"></script>
+	<script src="service.js"></script>
+</body>
 
-
-				<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.3/angular.min.js"></script>
-		<script src="app.js"></script>
-		<script src="controller.js"></script>
-		<script src="service.js"></script>
-	</body>
 </html>
