--- a/app4 - api/index.html
+++ b/app4 - api/index.html
@@ -1,15 +1,10 @@
 <html ng-app="apiApp">
-	<body ng-controller="gravy">
+	<body ng-controller="swCtrl">
 
-		<input type="text" ng-model="pokename">
-		<button ng-click="iChooseYou(pokename)">Get Pokemon</button>
+		{{starships}}
 
-		<div>
-			{{poke.name}}
-		</div>
-		<div>
-			{{poke.weight}}
-		</div>
+
+
 
 				<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.3/angular.min.js"></script>
 		<script src="app.js"></script>
